--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello coursera!</title>
 </head>
 <body>
-<h1>hello coursera<h1>
+<h1>hello coursera... it's a good course<h1>
 </body>
 </html>
